[package]
name = "oxide-arbiter"
version = "0.1.1-beta.2"
edition = "2024"
description = "A CLOB order matching engine with price-time priority, limit/market orders, and four time-in-force policies."
license = "MIT"
keywords = ["order-book", "matching-engine", "trading", "clob", "finance"]
categories = ["algorithms", "data-structures"]
repository = "https://github.com/stinkymonkeyph/oxide-arbiter"
readme = "README.md"

[dependencies]
chrono = "0.4.43"
ordered-float = "5.1.0"
uuid = { version = "1.20.0", features = ["v4"] }
